--- a/angol/videok/index.html
+++ b/angol/videok/index.html
@@ -92,6 +92,24 @@
                         </div>
                     </div>
                 </td>
+                <td>
+                    <div class="card" style="width: 18rem;">
+                        <img src="/uploads/images/thumbnails/2_resz.jpg" class="card-img-top" alt="..." width="50%">
+                        <div class="card-body">
+                            <h5 class="card-title">2. rész: angol anyanyelvű országok, színek, ABC, London</h5>
+                            <p class="card-text">2. rész tartalma: <br>
+                                - angol anyanyelvű országok,  <br>
+                                - színek,  <br>
+                                - ABC, <br>
+                                - London
+                            </p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://www.youtube.com/watch?v=IdDVVYK0waY" class="card-link">Youtube</a>
+                            <a href="/angol/videok/2_resz" class="card-link">Bővebben</a>
+                        </div>
+                    </div>
+                </td>
             </tr>
         </table>
 
