--- a/angol/videok/index.html
+++ b/angol/videok/index.html
@@ -77,7 +77,7 @@
         <table class="table">
             <tr>
                 <td>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img src="/uploads/images/thumbnails/1_resz.jpg" class="card-img-top" alt="..." width="50%">
                         <div class="card-body">
                             <h5 class="card-title">1. rész: magyar eredetű szavak az angolban, ABC</h5>
@@ -93,7 +93,7 @@
                     </div>
                 </td>
                 <td>
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <img src="/uploads/images/thumbnails/2_resz.jpg" class="card-img-top" alt="..." width="50%">
                         <div class="card-body">
                             <h5 class="card-title">2. rész: angol anyanyelvű országok, színek, ABC, London</h5>
