--- a/angol/videok/2_resz/index.html
+++ b/angol/videok/2_resz/index.html
@@ -96,9 +96,9 @@
                     Letölthető tartalom:
                 </h6>
                 <hr>
-                <a href="https://drive.google.com/file/d/1hFGxUEmFuLPQKeT3bGCElwZ_UVTHtVjh/view">>> Prezentáció, PDF</a>
-				<a href="https://drive.google.com/file/d/1pcKCKzKsuJaDPvf_DqoFEUNvl7GNX7Nb/view">>> ABC</a>
-				<a href="https://drive.google.com/file/d/1JTKyN9ybdy4glQiOzAtjtNa0M11Uf8uM/view">>> Színek</a>
+                <a href="https://drive.google.com/file/d/1hFGxUEmFuLPQKeT3bGCElwZ_UVTHtVjh/view">>> Prezentáció, PDF</a> <br>
+				<a href="https://drive.google.com/file/d/1pcKCKzKsuJaDPvf_DqoFEUNvl7GNX7Nb/view">>> ABC</a> <br>
+				<a href="https://drive.google.com/file/d/1JTKyN9ybdy4glQiOzAtjtNa0M11Uf8uM/view">>> Színek</a> <br>
             </td>
 
         </table>
