--- a/angol/tesztek/egyes_szam_tobbes_szam_teszt/index.html
+++ b/angol/tesztek/egyes_szam_tobbes_szam_teszt/index.html
@@ -12,6 +12,18 @@
     <title>Mezei Dávid - nyelvek és programozás</title>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SXV4EX4RD1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SXV4EX4RD1');
+</script>
+
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -24,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Főoldal</a>
+                        <a class="nav-link" aria-current="page" href="/">Főoldal</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/letoltesek/">Letöltések</a>
@@ -40,7 +52,7 @@
                                 <a class="dropdown-item" href="/angol/nyelvtan">Nyelvtani magyarázatok</a>
                             </li>
                             <li>
-                                <a class="dropdown-item" href="/angol/tesztek">Kattintgatós tesztek</a>
+                                <a class="dropdown-item active" href="/angol/tesztek">Kattintgatós tesztek</a>
                             </li>
                         </ul>
                     </li>
