--- a/angol/videok/2_resz/index.html
+++ b/angol/videok/2_resz/index.html
@@ -12,6 +12,18 @@
     <title>Mezei Dávid - nyelvek és programozás</title>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SXV4EX4RD1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SXV4EX4RD1');
+</script>
+
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -24,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Főoldal</a>
+                        <a class="nav-link" aria-current="page" href="/">Főoldal</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/letoltesek">Letöltések</a>
@@ -35,7 +47,7 @@
                             Angol
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/angol/videok">Videók</a></li>
+                            <li><a class="dropdown-item active" href="/angol/videok">Videók</a></li>
                             <li>
                                 <a class="dropdown-item" href="/angol/nyelvtan">Nyelvtani magyarázatok</a>
                             </li>
@@ -96,9 +108,9 @@
                     Letölthető tartalom:
                 </h6>
                 <hr>
-                <a href="https://drive.google.com/file/d/1hFGxUEmFuLPQKeT3bGCElwZ_UVTHtVjh/view">>> Prezentáció, PDF</a> <br>
-				<a href="https://drive.google.com/file/d/1pcKCKzKsuJaDPvf_DqoFEUNvl7GNX7Nb/view">>> ABC</a> <br>
-				<a href="https://drive.google.com/file/d/1JTKyN9ybdy4glQiOzAtjtNa0M11Uf8uM/view">>> Színek</a> <br>
+                <a href="https://drive.google.com/file/d/1hFGxUEmFuLPQKeT3bGCElwZ_UVTHtVjh/view">>> Prezentáció, PDF</a>
+				<a href="https://drive.google.com/file/d/1pcKCKzKsuJaDPvf_DqoFEUNvl7GNX7Nb/view">>> ABC</a>
+				<a href="https://drive.google.com/file/d/1JTKyN9ybdy4glQiOzAtjtNa0M11Uf8uM/view">>> Színek</a>
             </td>
 
         </table>
