--- a/angol/videok/index.html
+++ b/angol/videok/index.html
@@ -12,6 +12,18 @@
     <title>Mezei Dávid - nyelvek és programozás</title>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SXV4EX4RD1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SXV4EX4RD1');
+</script>
+
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -24,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Főoldal</a>
+                        <a class="nav-link" aria-current="page" href="/">Főoldal</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/letoltesek">Letöltések</a>
@@ -35,7 +47,7 @@
                             Angol
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/angol/videok">Videók</a></li>
+                            <li><a class="dropdown-item active" href="/angol/videok">Videók</a></li>
                             <li>
                                 <a class="dropdown-item" href="/angol/nyelvtan">Nyelvtani magyarázatok</a>
                             </li>
@@ -77,7 +89,7 @@
         <table class="table">
             <tr>
                 <td>
-                    <div class="card" style="width: auto;">
+                    <div class="card" style="width: 18rem;">
                         <img src="/uploads/images/thumbnails/1_resz.jpg" class="card-img-top" alt="..." width="50%">
                         <div class="card-body">
                             <h5 class="card-title">1. rész: magyar eredetű szavak az angolban, ABC</h5>
@@ -89,24 +101,6 @@
                         <div class="card-body">
                             <a href="https://www.youtube.com/watch?v=uDYfO6Xw3AY" class="card-link">Youtube</a>
                             <a href="/angol/videok/1_resz" class="card-link">Bővebben</a>
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <div class="card" style="width: auto;">
-                        <img src="/uploads/images/thumbnails/2_resz.jpg" class="card-img-top" alt="..." width="50%">
-                        <div class="card-body">
-                            <h5 class="card-title">2. rész: angol anyanyelvű országok, színek, ABC, London</h5>
-                            <p class="card-text">2. rész tartalma: <br>
-                                - angol anyanyelvű országok,  <br>
-                                - színek,  <br>
-                                - ABC, <br>
-                                - London
-                            </p>
-                        </div>
-                        <div class="card-body">
-                            <a href="https://www.youtube.com/watch?v=IdDVVYK0waY" class="card-link">Youtube</a>
-                            <a href="/angol/videok/2_resz" class="card-link">Bővebben</a>
                         </div>
                     </div>
                 </td>
