--- a/kapcsolat/index.html
+++ b/kapcsolat/index.html
@@ -11,6 +11,17 @@
   <title>Mezei Dávid - nyelvek és programozás</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SXV4EX4RD1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SXV4EX4RD1');
+</script>
+
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -47,7 +58,7 @@
             <a class="nav-link" href="/rolam">Rólam</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/kapcsolat">Kapcsolat</a>
+            <a class="nav-link active" href="/kapcsolat">Kapcsolat</a>
           </li>
         </ul>
       </div>
