--- a/letoltesek/ytsnap/index.html
+++ b/letoltesek/ytsnap/index.html
@@ -12,6 +12,17 @@
     <title>Mezei Dávid - nyelvek és programozás</title>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SXV4EX4RD1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SXV4EX4RD1');
+</script>
+
+
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -24,10 +35,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Főoldal</a>
+                        <a class="nav-link" aria-current="page" href="/">Főoldal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/letoltesek">Letöltések</a>
+                        <a class="nav-link active" href="/letoltesek">Letöltések</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
