--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Mezei Dávid - nyelvek és programozás</title>
 </head>
 
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SXV4EX4RD1"></script>
 <script>
@@ -21,6 +22,7 @@
 
   gtag('config', 'G-SXV4EX4RD1');
 </script>
+
 
 <body>
     <!-- Navbar -->
@@ -34,10 +36,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Főoldal</a>
+                        <a class="nav-link" aria-current="page" href="/">Főoldal</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/letoltesek/">Letöltések</a>
+                        <a class="nav-link" href="/letoltesek">Letöltések</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -45,7 +47,7 @@
                             Angol
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="/angol/videok">Videók</a></li>
+                            <li><a class="dropdown-item active" href="/angol/videok">Videók</a></li>
                             <li>
                                 <a class="dropdown-item" href="/angol/nyelvtan">Nyelvtani magyarázatok</a>
                             </li>
@@ -79,156 +81,72 @@
     </nav>
 
 
-
-
-
-    <!-- Üdvözöllek -->
+    <!-- Video kártyák -->
     <div class="container">
-        <div class="row my-4">
-            <div class="col">
-                <h1 class="display-4 text-info">Üdvözöllek!</h1>
-                <p>Köszöntelek a weboldalamon! Ha jobban meg szeretnél ismerni, kattints <a href="/rolam">ide!</a>
-                    Programozással és
-                    az angol nyelvtanulással foglalkozó oldalam mindenki számára érdekes lehet... Nézz szét!
-                </p>
+        <h1 class="display-4 text-info">Videók</h1>
+        <h6 class="display-6 text-dark evad-jelolo">1.évad - kezdő szint</h6>
+
+        <table class="table">
+            <tr>
+                <td>
+                    <!-- 1.resz -->
+                    <div class="card" style="width: auto;">
+                        <img src="/uploads/images/thumbnails/1_resz.jpg" class="card-img-top" alt="..." width="50%">
+                        <div class="card-body">
+                            <h5 class="card-title">1. rész: magyar eredetű szavak az angolban, ABC</h5>
+                            <p class="card-text">1. rész tartalma: <br>
+                                - weboldal használatának ismertetése <br>
+                                - magyar eredetű angol szavak <br>
+                                - ABC</p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://www.youtube.com/watch?v=uDYfO6Xw3AY" class="card-link">Youtube</a>
+                            <a href="/angol/videok/1_resz" class="card-link">Bővebben</a>
+                        </div>
+                    </div>
+                </td>
+                <!-- 2.resz -->
+                <td>
+                    <div class="card" style="width: auto;">
+                        <img src="/uploads/images/thumbnails/2_resz.jpg" class="card-img-top" alt="..." width="50%">
+                        <div class="card-body">
+                            <h5 class="card-title">2. rész: angol anyanyelvű országok, színek, ABC, London</h5>
+                            <p class="card-text">2. rész tartalma: <br>
+                                - angol anyanyelvű országok <br>
+                                - színek <br>
+                                - ABC <br>
+                                - London</p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://www.youtube.com/watch?v=IdDVVYK0waY" class="card-link">Youtube</a>
+                            <a href="/angol/videok/2_resz" class="card-link">Bővebben</a>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
+
+
+    </div>
+
+   
+
+    </div>
+
+
+    <!-- Footer -->
+
+    <div class="container">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <span class="text-muted">&copy; 2023 - Mezei Dávid</span>
             </div>
 
-            <!--- Slider --->
-            <div class="col">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                            class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                            aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                            aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <a href="/munkaim"><img src="uploads/images/slider/slider1.jpg" class="d-block w-100"
-                                    alt="..."></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="/angol/videok"><img src="uploads/images/slider/slider2.jpg" class="d-block w-100"
-                                    alt="..."></a>
-                        </div>
-                        <div class="carousel-item">
-                            <a href="/rolam"><img src="uploads/images/slider/slider3.jpg" class="d-block w-100"
-                                    alt="..."></a>
-                        </div>
-                    </div>
-                </div>
 
-            </div>
-
-
-
-
-
-
-            <!-- Dobozok -->
-            <section class="p-5">
-                <div class="container">
-                    <div class="row text-center g-4">
-                        <div class="col-md">
-                            <div class="card bg-primary text-light">
-                                <div class="card-body text-center">
-                                    <h3 class="card-title mb-3">Letöltések</h3>
-                                    <p class="card-text">
-                                        Programjaimat szeretnéd letölteni? Kattints a gombra!
-                                    </p>
-                                    <a href="/letoltesek" class="btn btn-dark">Letöltések</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md">
-                            <div class="card bg-secondary text-light">
-                                <div class="card-body text-center">
-                                    <h3 class="card-title mb-3">Angol</h3>
-                                    <p class="card-text">
-                                        Angol videosorozatommal kapcsolatos oldalak
-                                    </p>
-                                    <a href="/angol/videok" class="btn btn-dark">Angol</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md">
-                            <div class="card bg-dark text-light">
-                                <div class="card-body text-center">
-                                    <h3 class="card-title mb-3">Rólam - bemutatkozás</h3>
-                                    <p class="card-text">
-                                        Pár mondatos bemutatkozásomat olvashatod.
-                                    </p>
-                                    <a href="/rolam" class="btn btn-primary">Rólam</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-            <!-- Hírlevél banner -->
-
-            <section class="bg-primary text-light p-2">
-                <div class="container text-center">
-                    <div class="row my-4 align-items-end">
-                        <div class="col">
-                            <h4>Iratkozz fel a hírlevelemre! </h4>
-                        </div>
-                        <div class="col">
-                            <!-- Button trigger modal -->
-                            <button type="button" class="btn btn-dark" data-bs-toggle="modal"
-                                data-bs-target="#subscribeModal">
-                                Feliratkozom
-                            </button>
-
-                            <!-- Modal -->
-                            <div class="modal fade" id="subscribeModal" tabindex="-1"
-                                aria-labelledby="subscribeModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="subscribeModalLabel">Feliratkozás</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">ó
-                                            <script type="text/javascript"
-                                                src="https://listamester.hu/static/js/resize-iframe.js"></script>
-                                            <iframe src="https://listamester.hu/forms/fe/1/1/7/6/11767.html"
-                                                onload="resizeIframe(this)"></iframe>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-                </div>
-            </section>
-
-
-            <!-- Footer -->
-
-            <div class="container">
-                <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-                    <div class="col-md-4 d-flex align-items-center">
-                        <span class="text-muted">&copy; 2023 - Mezei Dávid</span>
-                    </div>
-
-
-
-                    <!-- Script import-->
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-                        crossorigin="anonymous"></script>
-            </div>
+            <!-- Script import-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
