--- a/angol/videok/index.html
+++ b/angol/videok/index.html
@@ -89,7 +89,8 @@
         <table class="table">
             <tr>
                 <td>
-                    <div class="card" style="width: 18rem;">
+                    <!-- 1.resz -->
+                    <div class="card" style="width: auto;">
                         <img src="/uploads/images/thumbnails/1_resz.jpg" class="card-img-top" alt="..." width="50%">
                         <div class="card-body">
                             <h5 class="card-title">1. rész: magyar eredetű szavak az angolban, ABC</h5>
@@ -101,6 +102,24 @@
                         <div class="card-body">
                             <a href="https://www.youtube.com/watch?v=uDYfO6Xw3AY" class="card-link">Youtube</a>
                             <a href="/angol/videok/1_resz" class="card-link">Bővebben</a>
+                        </div>
+                    </div>
+                </td>
+                <!-- 2.resz -->
+                <td>
+                    <div class="card" style="width: auto;">
+                        <img src="/uploads/images/thumbnails/2_resz.jpg" class="card-img-top" alt="..." width="50%">
+                        <div class="card-body">
+                            <h5 class="card-title">2. rész: angol anyanyelvű országok, színek, ABC, London</h5>
+                            <p class="card-text">2. rész tartalma: <br>
+                                - angol anyanyelvű országok <br>
+                                - színek <br>
+                                - ABC <br>
+                                - London</p>
+                        </div>
+                        <div class="card-body">
+                            <a href="https://www.youtube.com/watch?v=IdDVVYK0waY" class="card-link">Youtube</a>
+                            <a href="/angol/videok/2_resz" class="card-link">Bővebben</a>
                         </div>
                     </div>
                 </td>
