--- a/angol/videok/index.html
+++ b/angol/videok/index.html
@@ -136,7 +136,7 @@
                                 
                         </div>
                         <div class="card-body">
-                            <a href="https://www.youtube.com/watch?v=IdDVVYK0waY" class="card-link">Youtube</a>
+                            <a href="https://www.youtube.com/watch?v=3M8rUEymv2g" class="card-link">Youtube</a>
                             <a href="/angol/videok/3_resz" class="card-link">Bővebben</a>
                         </div>
                     </div>
